Сборка проекта и минорные правки